Issue 50 Avoid that spaces and hyphens in tags create word wrap
Also an a bottom margin to properly separate the section from entry
main content.

--- a/themes/elmcip/css/fields.css
+++ b/themes/elmcip/css/fields.css
@@ -75,7 +75,9 @@
 }
 
 .field-tags-inline a {
+  display: inline-block;
   margin-right: 1.5em;
+  white-space: nowrap;
 }
 
 .field-name-field-pullquote div.field-item {
